--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
     "framer-motion": "^3.6.7",
+    "lerp": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hammerjs": "^1.0.1",
