--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.2",
     "framer-motion": "^3.6.7",
     "lerp": "^1.0.3",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hammerjs": "^1.0.1",
