--- a/src/config.json
+++ b/src/config.json
@@ -1,14 +1,44 @@
 [
     {
-        "color": "#ff0055"
+        "color": "#ff0055",
+        "preview": "preview1",
+        "video-preview": "preview2",
+        "enabled": "true",
+        "title": "SEJI",
+        "role": "FRONT END",
+        "desc": "Seji is a digital media production company. I emulated a modern minimalist design to attract the most attention to their work. I made up Seji to test new designs and interactive components.",
+        "year": "2020",
+        "link": "https://www.seji.brandon-choi.info/"
     },
     {
-        "color": "#0099ff"
+        "color": "#0099ff",
+        "preview": " nomina1",
+        "video-preview": "nomina2",
+        "enabled": "true",
+        "title": "NOMINA",
+        "role": "FRONT END",
+        "desc": "Nomina is a high end jewelry company. I incorporated elegent and simplistic animations and interactions.",
+        "year": "2020",
+        "link": "https://www.nomina.brandon-choi.info/"
     },
     {
-        "color": "#22cc88"
+        "color": "#22cc88",
+        "preview": "comingsoon",
+        "video-preview": "preview2",
+        "enabled": "false",
+        "title": "COMING SOON",
+        "role": "FRONT END + BACK END",
+        "desc": "I made a highly versatile clothing scalper of a popular clothng brand called Supreme. BTW i never used or lent it to anyone!",
+        "year": "2018"
     },
     {
-        "color": "#ffaa00"
+        "color": "#ffaa00",
+        "preview": "comingsoon",
+        "video-preview": "preview2",
+        "enabled": "false",
+        "title": "COMING SOON",
+        "role": "BACK END",
+        "desc": "Here are some miscellaneous goodies I made in highschool.",
+        "year": "2018"
     }
 ]
