--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-hammerjs": "^1.0.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-query": "^3.12.0",
     "react-scripts": "4.0.3",
     "recoil": "^0.1.2",
     "web-vitals": "^1.1.0"
